<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00205B">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navy"
        android:textSize="25sp"
        android:textColor="#C5B783"
        android:layout_gravity="center_horizontal"
        android:layout_margin="25dp"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation = "horizontal"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text= "@string/airplane"
        android:layout_marginRight="2dp"
        android:textSize="20sp"
        android:textColor="#C5B783"
        android:layout_gravity="center_horizontal"
        />
    <Spinner
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown"
        android:background="@color/white"
        android:id="@+id/spinner_aircraft">
    </Spinner>
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neg"
        android:layout_gravity="center_horizontal"
        android:textColor="#C5B783"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#C5B783"
        android:text="@string/dir"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#C5B783"
                android:textSize="18sp"
                android:text="@string/lat1"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:background="#C5B783"
                android:id="@+id/lat1"
                android:inputType="numberSigned|numberDecimal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#C5B783"
                android:textSize="18sp"
                android:text="@string/long1"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:background="#C5B783"
                android:id="@+id/long1"
                android:inputType="numberSigned|numberDecimal"                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#C5B783"

                android:textSize="18sp"
                android:text="@string/lat2"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:background="#C5B783"
                android:id="@+id/lat2"
                android:inputType="numberSigned|numberDecimal"                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#C5B783"
                android:textSize="18sp"
                android:text="@string/long2"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:background="#C5B783"
                android:id="@+id/long2"
                android:inputType="numberSigned|numberDecimal"  />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dist"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:id="@+id/button"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#C5B783"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:id="@+id/distance"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#C5B783"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:id="@+id/travel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C5B783"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:id="@+id/refuel"
            android:layout_margin="15dp"/>
    </LinearLayout>
